--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "serve": "^11.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "dev": "react-scripts start",
+"start": "serve -s build",
+"build": "react-scripts build",
+"heroku-postbuild": "npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
