--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dropdown": "^1.8.0",
     "react-google-charts": "^3.0.15",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
@@ -24,9 +25,9 @@
   },
   "scripts": {
     "dev": "react-scripts start",
-"start": "serve -s build",
-"build": "react-scripts build",
-"heroku-postbuild": "npm run build",
+    "start": "serve -s build",
+    "build": "react-scripts build",
+    "heroku-postbuild": "npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
